--- a/nodejs/api-app/.env
+++ b/nodejs/api-app/.env
@@ -1,1 +1,3 @@
-PASSWORD="gGHgqSJ1s1xU4MGK"
+USER_NAME=swachhbharat404
+PASSWORD=gGHgqSJ1s1xU4MGK
+DB_URI=mongodb+srv://swachhbharat404:gGHgqSJ1s1xU4MGK@cluster0.qvfurnx.mongodb.net/?retryWrites=true&w=majority
